--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-set(EXTRA_COMPONENT_DIRS ${project_dir}/components)
+set(EXTRA_COMPONENT_DIRS ${PWD}../)
 set(TEST_COMPONENTS "${CODE_PATH}" CACHE STRING "List of components to test")
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(project_test)
