--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
-set(EXTRA_COMPONENT_DIRS "${PWD}../")
+
+set(EXTRA_COMPONENT_DIRS "./components")
+
 set(TEST_COMPONENTS "nvs_muv_library" CACHE STRING "List of components to test")
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(project_test)
