--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(EXTRA_COMPONENT_DIRS "./components")
+set(EXTRA_COMPONENT_DIRS "../")
 
 set(TEST_COMPONENTS "nvs_muv_library" CACHE STRING "List of components to test")
 
